# mb-keyword-analysis

./: .env.example  .gitignore  CLAUDE.md  PLUGIN_MAINTENANCE.md  README.md
.claude-plugin/: plugin.json
backend/: __init__.py  requirements.txt
backend/knowledge_base/: extracted_raw.json
commands/: keyword-analysis.md
hooks/: hooks.json  validate-completion.py  validate-phase-gate.py
mcp-servers/google-ads-rag/: README.md  pyproject.toml  server.py
schemas/: README.md  ad_copy.schema.json  ads.schema.json  campaign_structure.schema.json  keyword_analysis.schema.json  keywords.schema.json  negative_keywords.schema.json  roi_calculator.schema.json
scripts/: add_negative_keywords.py  add_roi_tab.py  add_to_rag.py  analyze_karim_design.py  analyze_karim_strategy.py  apply_brand_exclusion.py  apply_gtm_changes.py  audit_account.py  build_rag_db.py  check_chroma.py  check_ga4_tag.py  check_tag_44.py  check_variable.py  cleanup_gtm_tags.py  consult_rag.py  create_offline_conversion_action.py  create_test_account.py  debug_access.py  debug_campaign.py  debug_sitelink.py  extract_knowledge.py  fetch_real_keyword_data.py  find_tags_to_pause.py  fix_gtm_implementation.py  fix_gtm_tracking.py  fix_gtm_variable.py  generate_history.py  generate_multiscope_token.py  generate_presentation.py  get_audience_lists.py  get_brand_campaign_id.py  get_master_token.py  ingest_knowledge.py  init_bigquery.py  link_ga4_ads.py  list_accounts.py  list_gtm_details.py  list_gtm_variables.py  list_sub_accounts.py  list_workspace_tags.py  (+13 more)
templates/: presentation_template.html
(+279 files in other folders)
