[project]
name = "google-ads-rag-knowledge"
version = "0.1.0"
description = "MCP server for Monday Brew Google Ads knowledge base"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "chromadb>=0.4.0",
]

[project.scripts]
google-ads-rag = "server:mcp.run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
